--- a/TrashCollector/Views/Customer/Delete.cshtml
+++ b/TrashCollector/Views/Customer/Delete.cshtml
@@ -52,21 +52,12 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.PickupDays)
+            @Html.DisplayNameFor(model => model.PickupDay)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.PickupDays)
+            @Html.DisplayFor(model => model.PickupDay)
         </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Exceptions)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Exceptions)
-        </dd>
-
     </dl>
 
     @using (Html.BeginForm()) {
