--- a/TrashCollector/Views/Employee/Index.cshtml
+++ b/TrashCollector/Views/Employee/Index.cshtml
@@ -1,5 +1,4 @@
 ﻿@model IEnumerable<TrashCollector.Models.Customer>
-
 @{
     ViewBag.Title = "Index";
 }
@@ -9,7 +8,10 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.ZipCode)
+            @Html.DisplayNameFor(model => model.FirstName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.LastName)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.StreetAddress)
@@ -21,19 +23,19 @@
             @Html.DisplayNameFor(model => model.State)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LastName)
+            @Html.DisplayNameFor(model => model.ZipCode)
         </th>
         <th></th>
     </tr>
-    
-@foreach (var item in Model) 
-@*.Where(i => i.ZipCode == )*@ {
+
+@foreach (var item in Model)
+{
 <tr>
     <td>
-        @Html.DisplayFor(modelItem => item.ZipCode)
+        @Html.DisplayFor(modelItem => item.FirstName)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.LastName)
     </td>
     <td>
         @Html.DisplayFor(modelItem => item.StreetAddress)
@@ -45,17 +47,10 @@
         @Html.DisplayFor(modelItem => item.State)
     </td>
     <td>
-        @Html.DisplayFor(modelItem => item.FirstName)
+        @Html.DisplayFor(modelItem => item.ZipCode)
     </td>
     <td>
-        @Html.DisplayFor(modelItem => item.LastName)
-    </td>
-    <td>
-        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-        @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+        @Html.ActionLink("Today's Customers", "Today", "Employee")
     </td>
 </tr>
 }
-
-</table>
