--- a/TrashCollector/Views/Employee/Index.cshtml
+++ b/TrashCollector/Views/Employee/Index.cshtml
@@ -3,7 +3,8 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Your Customers</h2>
+<h2>Today's Customers</h2>
+@Html.ActionLink("All Customers", "AllCustomers", "Employee")
 
 <table class="table">
     <tr>
@@ -28,29 +29,28 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model)
-{
-<tr>
-    <td>
-        @Html.DisplayFor(modelItem => item.FirstName)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.LastName)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.StreetAddress)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.City)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.State)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.ZipCode)
-    </td>
-    <td>
-        @Html.ActionLink("Today's Customers", "Today", "Employee")
-    </td>
-</tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.FirstName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LastName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.StreetAddress)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.City)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.State)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ZipCode)
+            </td>
+        </tr>
+    }
+    </table>
+    @Html.ActionLink("All Customers", "AllCustomers", "Employee")
