--- a/TrashCollector/Views/Customer/Edit.cshtml
+++ b/TrashCollector/Views/Customer/Edit.cshtml
@@ -15,6 +15,8 @@
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.Id)
+    @Html.HiddenFor(model => model.UserName)
+    @Html.HiddenFor(model => model.ApplicationUserId)
 
     <div class="form-group">
         @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
