--- a/TrashCollector/Views/Customer/Create.cshtml
+++ b/TrashCollector/Views/Customer/Create.cshtml
@@ -17,6 +17,7 @@
     @Html.HiddenFor(model => model.Id)
     @Html.HiddenFor(model => model.UserName)
     @Html.HiddenFor(model => model.ApplicationUserId)
+    @Html.HiddenFor(model => model.PickupActivity)
     <div class="form-group">
         @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
