--- a/TrashCollector/Views/Customer/Edit.cshtml
+++ b/TrashCollector/Views/Customer/Edit.cshtml
@@ -72,6 +72,13 @@
             @Html.ValidationMessageFor(model => model.PickupDay, "", new { @class = "text-danger" })
         </div>
     </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.PickupActivity, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.PickupActivity, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.PickupActivity, "", new { @class = "text-danger" })
+        </div>
+    </div>
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
