--- a/TrashCollector/Views/Customer/Index.cshtml
+++ b/TrashCollector/Views/Customer/Index.cshtml
@@ -7,6 +7,10 @@
 
 <div>
     <h4>Customer</h4>
+    @Html.HiddenFor(model => model.Id)
+    @Html.HiddenFor(model => model.UserName)
+    @Html.HiddenFor(model => model.ApplicationUserId)
+    @Html.HiddenFor(model => model.PickupActivity)
     <hr />
     <dl class="dl-horizontal">
         <dt>
