--- a/TrashCollector/Views/Customer/Index.cshtml
+++ b/TrashCollector/Views/Customer/Index.cshtml
@@ -75,6 +75,13 @@
         <dd>
             @Html.DisplayFor(model => model.OneTimePickup)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.MonthlyBill)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.MonthlyBill)
+        </dd>
     </dl>
     <div class="form-group">
         @Html.LabelFor(model => model.PickupActivity, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -86,6 +93,6 @@
 </div>
 <p>
     @Html.ActionLink("Edit Information", "Edit", new { id = Model.Id })
-    @Html.ActionLink("Request one time pickup", "Pickup", new { id = Model.Id })
+    @Html.ActionLink("Request one time pickup", "OneTime", new { id = Model.Id })
     @Html.ActionLink("Monthly Statement", "Statement", new { id = Model.Id})
 </p>
