--- a/TrashCollector/Views/Customer/Create.cshtml
+++ b/TrashCollector/Views/Customer/Create.cshtml
@@ -74,8 +74,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.PickupDay, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.PickupDay, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.PickupDay, "", new { @class = "text-danger" })
+            @Html.DropDownListFor(model => model.PickupDay, new SelectList(Enum.GetValues(typeof(DayOfWeek))), "Select Weekday", new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
