--- a/TrashCollector/Views/Customer/Suspend.cshtml
+++ b/TrashCollector/Views/Customer/Suspend.cshtml
@@ -17,15 +17,21 @@
     @Html.HiddenFor(model => model.State)
     @Html.HiddenFor(model => model.ZipCode)
     @Html.HiddenFor(model => model.PickupActivity)
-    @Html.HiddenFor(model => model.SuspensionEnd)
-    @Html.HiddenFor(model => model.SuspensionStart)
+    @Html.HiddenFor(model => model.OneTimePickup)
 
     <div class="form-horizontal">
         <div class="form-group">
-            @Html.LabelFor(model => model.OneTimePickup, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.SuspensionStart, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.OneTimePickup, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.OneTimePickup, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.SuspensionStart, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.SuspensionStart, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.SuspensionEnd, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.SuspensionEnd, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.SuspensionEnd, "", new { @class = "text-danger" })
             </div>
         </div>
 
