--- a/TrashCollector/Views/Employee/Create.cshtml
+++ b/TrashCollector/Views/Employee/Create.cshtml
@@ -17,19 +17,12 @@
     @Html.HiddenFor(model => model.Id)
     @Html.HiddenFor(model => model.UserName)
     @Html.HiddenFor(model => model.ApplicationUserId)
+    @Html.HiddenFor(model => model.Email)
     <div class="form-group">
         @Html.LabelFor(model => model.AreaZipCode, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.AreaZipCode, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.AreaZipCode, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
         </div>
     </div>
 
