All user stories complete for employees and customers. API started but nowhere close to finished

--- a/TrashCollector/Views/Employee/Index.cshtml
+++ b/TrashCollector/Views/Employee/Index.cshtml
@@ -59,6 +59,7 @@
             </td>
             <td>
                 @Html.ActionLink("Confirm Pickup", "Charge", new { id = item.Id })
+                @Html.ActionLink("Map", "Map", new { id = item.Id })
             </td>
         </tr>
     }
